# chatgpt-mixin

./: .gitignore  LICENSE  README.md  bot-config.yaml  release.txt  requirements.txt  setup.cfg  setup.py  tag.sh
.github/workflows/: build.yml
src/: __main__.py  chatgpt.py  chatgpt_browser.py  chatgpt_openai.py  mixinbot.py  test.py
