[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options]
install_requires =
  pyyaml
  mixin-python
  openai>=0.27.0

[options.extras_require]
browser =
  playwright
  cf_clearance

[options.entry_points]
console_scripts =
    chatgpt_bot = chatgpt_mixin.mixinbot:run
